2009-10-28  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra: fix typos

2009-10-28  Martin Rubey  <martin.rubey@math.uni-hannover.de>

	* src/lisp/fricas-lisp.lisp: make sbcl remember command line
	parameters

2009-10-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/format.boot: Avoid crash when unparsing equations.

2009-10-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* configure.ac: Change '--with-noweb' to '--with-noweb-tarball'.

2009-10-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/br-op2.boot: dbGetFormFromDocumentation():
	Eliminate bogus error messages.

2009-10-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/scripts/document.in: Comment out buggy code.
	src/lisp/Makefile.in, configure.ac: Fixes for sbcl on
	Windows.

2009-10-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/*: Whitspace cleanup.

2009-10-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/c-doc.boot, src/interp/clam.boot,
	src/interp/br-saturn.boot, src/interp/functor.boot,
	src/interp/util.lisp, src/interp/fortcall.boot,
	src/interp/g-cndata.boot, src/interp/g-util.boot,
	src/interp/as.boot, src/interp/g-timer.boot,
	src/interp/g-error.boot: Misc cleanups.

2009-10-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/xpoly.spad.pamphlet,
	src/algebra/xlpoly.spad.pamphlet: Update comments.

2009-10-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Fix Aldor breakage.
	* src/aldor/gendepap.lsp: generate-ax-file(): Set
	'*print-circle* ' to nil.

2009-10-21  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/interp/hashcode.boot: Change the hashcode of Mapping.
	The patch is due to Peter Broadbery.
	http://groups.google.com/group/fricas-devel/browse_thread/thread/c1d1ccc263415ba5

	* configure.ac, Makefile.in, config/var-def.mk:
	Enable --with-noweb=/path/to/noweb-2.10a.tgz.
	Disable --with-included-noweb.
	Remove axiom_optional_srcdir.

2009-10-20  Ralf Hemmecke  <ralf@hemmecke.de>
