@@ -1,3 +1,10 @@
+2009-10-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* Makefile.in, src/algebra/Makefile.in,
+	src/lisp/Makefile.in, src/etc/Makefile.in,
+	src/paste/Makefile.in, contrib/emacs/Makefile.in,
+	config/setup-dep.mk: Makefile fixes.
+
 2009-10-28  Martin Rubey  <martin.rubey@univie.ac.at>
 
 	* src/algebra: fix typos
